--- a/artifactory-subchart/dev/values.yaml
+++ b/artifactory-subchart/dev/values.yaml
@@ -12,3 +12,16 @@ pipelines:
 ## This Redis is used by pipelines only, set redis.enabled: false, when pipelines is not enabled
 redis:
   enabled: true
+artifactory:
+  mc:
+    enabled: false
+  nginx:
+    enabled: false
+  ingress:
+    enabled: true
+    hosts:
+      - artifactory.kosukeamano.com
+    annotations: 
+      kubernetes.io/ingress.class: "nginx"
+    
+
