--- a/artifactory-subchart/dev/values.yaml
+++ b/artifactory-subchart/dev/values.yaml
@@ -1,27 +1,28 @@
-xray:
-  enabled: false
-## This Rabbitmq is used by Xray and Pipelines only, set rabbitmq.enabled: false, when Xray or Pipelines is not enabled
-rabbitmq:
-  enabled: false
-insight:
-  enabled: false
-distribution:
-  enabled: false
-pipelines:
-  enabled: false
-## This Redis is used by pipelines only, set redis.enabled: false, when pipelines is not enabled
-redis:
-  enabled: true
-artifactory:
-  mc:
+jfrog-platform:
+  xray:
     enabled: false
-  nginx:
+  ## This Rabbitmq is used by Xray and Pipelines only, set rabbitmq.enabled: false, when Xray or Pipelines is not enabled
+  rabbitmq:
     enabled: false
-  ingress:
+  insight:
+    enabled: false
+  distribution:
+    enabled: false
+  pipelines:
+    enabled: false
+  ## This Redis is used by pipelines only, set redis.enabled: false, when pipelines is not enabled
+  redis:
     enabled: true
-    hosts:
-      - artifactory.kosukeamano.com
-    annotations: 
-      kubernetes.io/ingress.class: "nginx"
+  artifactory:
+    mc:
+      enabled: false
+    nginx:
+      enabled: false
+    ingress:
+      enabled: true
+      hosts:
+        - artifactory.kosukeamano.com
+      annotations: 
+        kubernetes.io/ingress.class: "nginx"
     
 
